Update author name to Ritesh Kawadkar

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home-loan-optimizer",
   "version": "1.0.0",
   "description": "An advanced financial planning tool for home loan prepayment vs investment analysis",
-  "author": "Your Name",
+  "author": "Ritesh Kawadkar",
   "license": "MIT",
   "repository": {
     "type": "git",
